Added ValueSource enum

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php": "^7.0.0",
-        "4kizuki/php-bsc": "^1.0"
+        "4kizuki/php-bsc": "^1.0",
+        "4kizuki/php-enum": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3"
